--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>The first heading</h1>
     <p>The first paragraph</p>
+
+    <h1>The second heading</h1>
+    <p>The second paragraph</p>
 </body>
 </html>
